// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component Should be disabled, checked and with value 1`] = `
<label
  className="radio"
  disabled={true}
  style={Object {}}
>
  <input
    checked={true}
    disabled={true}
    name="test"
    type="radio"
    value="TEST"
  />
  <p>
    Default
  </p>
</label>
`;

exports[`Radio component Should concat classname in props with Bulma classname 1`] = `
<label
  className="radio other-class this-is-a-test"
  disabled={false}
  style={Object {}}
>
  <input
    checked={false}
    disabled={false}
    name="test"
    type="radio"
    value=""
  />
  <p>
    Default
  </p>
</label>
`;

exports[`Radio component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "checked": false,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "disabled": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "responsive": undefined,
    "shadowless": false,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
    "value": "",
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "checked": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "disabled": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "name": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
    "value": [Function],
  },
  "render": [Function],
}
`;

exports[`Radio component Should have radio classname 1`] = `
<label
  className="radio"
  disabled={false}
  style={Object {}}
>
  <input
    checked={false}
    disabled={false}
    name="test"
    type="radio"
    value=""
  />
  Test 
  <a>
    Give me
  </a>
</label>
`;

exports[`Radio component Should use inline styles 1`] = `
<label
  className="radio"
  disabled={false}
  style={
    Object {
      "height": 250,
    }
  }
>
  <input
    checked={false}
    disabled={false}
    name="test"
    type="radio"
    value=""
  />
  <p>
    Default
  </p>
</label>
`;
